--- a/package.json
+++ b/package.json
@@ -9,17 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@glidejs/glide": "^3.6.0",
     "@types/node": "18.15.12",
     "@types/react": "18.0.37",
     "@types/react-dom": "18.0.11",
     "autoprefixer": "10.4.14",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
+    "flickity": "^2.3.0",
     "lucide-react": "^0.176.0",
     "next": "13.3.0",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-flickity-component": "^4.0.5",
+    "swiper": "^9.3.0",
     "tailwindcss": "3.3.1",
     "typescript": "5.0.4"
   }
